# NiflectSample

./: CMakeLists.txt  Main.cpp  MyClass.h
Source/Sample0/: CMakeLists.txt  Gen.bat  Main.cpp
Source/Sample1/: CMakeLists.txt  Gen.bat  Main.cpp  MyClass.cpp  MyClass.h  MyResourceAccessor.cpp  MyResourceAccessor.h  MySingleton.cpp  MySingleton.h  MySingletonAccessor.cpp  MySingletonAccessor.h  Sample1AccessorSetting.h
